--- a/index.html
+++ b/index.html
@@ -80,24 +80,8 @@
     </div>
     <div class="menu-item">
         <strong>Mie Ayam Pangsit</strong> – Rp12.000
-    </div>
     <div class="menu-item">
-        <strong>Mie Ayam Telur</strong> – Rp11.000
-    </div>
-    <div class="menu-item">
-        <strong>Mie Ayam Jamur</strong> – Rp13.000
-    </div>
-    <div class="menu-item">
-        <strong>Mie Ayam Level 1</strong> (sedikit pedas) – Rp11.000
-    </div>
-    <div class="menu-item">
-        <strong>Mie Ayam Level 2</strong> (pedas sedang) – Rp12.000
-    </div>
-    <div class="menu-item">
-        <strong>Mie Ayam Level 3</strong> (pedas hot) – Rp13.000
-    </div>
-    <div class="menu-item">
-        <strong>Paket Hemat:</strong> Mie Ayam + Es Teh / Teh Hangat – Rp15.000
+        <strong>Paket Hemat:</strong> Mie Ayam Bakso dan Pangsit + Es Teh / Teh Hangat – Rp17.000
     </div>
 </section>
 
