--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </div>
     <div class="menu-item">
         <strong>Mie Ayam Pangsit</strong> – Rp12.000
+    </div>
     <div class="menu-item">
         <strong>Paket Hemat:</strong> Mie Ayam Bakso dan Pangsit + Es Teh / Teh Hangat – Rp17.000
     </div>
